--- a/index.html
+++ b/index.html
@@ -308,16 +308,16 @@ header { position: relative; }
 
 /* ── Universal Bottom Nav Bar ── */
 .parent-bar { position: fixed; bottom: 0; left: 0; right: 0; width: 100%; z-index: 100; display: flex; justify-content: center; gap: 8px; padding: 12px 14px 20px; padding-bottom: max(20px, env(safe-area-inset-bottom)); background: rgba(255,255,255,0.98); border-top: 2.5px solid var(--border); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); box-sizing: border-box; box-shadow: 0 -4px 20px rgba(0,0,0,0.1); border-radius: 0; }
-.parent-bar-btn { background: var(--purple-soft); border: 2.5px solid var(--border); color: var(--purple-deep); font-family: 'Nunito', sans-serif; font-size: 0.88rem; font-weight: 800; padding: 12px 18px; border-radius: 14px; cursor: pointer; transition: all 0.2s; flex: 1; max-width: 150px; text-align: center; }
+.parent-bar-btn { background: var(--purple-soft); border: 2.5px solid var(--border); color: var(--purple-deep); font-family: 'Nunito', sans-serif; font-size: 0.88rem; font-weight: 800; padding: 12px 18px; border-radius: 14px; cursor: pointer; transition: all 0.2s; flex: 1; text-align: center; }
 .parent-bar-btn:hover { border-color: var(--purple); background: var(--purple); color: #fff; }
 .parent-bar-btn:active { transform: scale(0.95); }
 @media (min-width: 768px) {
-  .parent-bar { padding: 14px 20px 18px; gap: 10px; }
-  .parent-bar-btn { font-size: 0.95rem; padding: 14px 28px; max-width: 180px; border-radius: 16px; }
+  .parent-bar { padding: 14px 20px 18px; gap: 10px; max-width: 600px; margin: 0 auto; left: 50%; transform: translateX(-50%); }
+  .parent-bar-btn { font-size: 0.95rem; padding: 14px 28px; border-radius: 16px; }
 }
 @media (min-width: 1024px) {
-  .parent-bar { padding: 14px 30px 18px; gap: 12px; }
-  .parent-bar-btn { font-size: 1rem; padding: 14px 36px; max-width: 200px; }
+  .parent-bar { padding: 14px 30px 18px; gap: 12px; max-width: 700px; }
+  .parent-bar-btn { font-size: 1rem; padding: 14px 36px; }
 }
 .bar-btn-home { background: var(--green) !important; color: #fff !important; border-color: var(--green) !important; }
 .bar-btn-back { background: var(--orange) !important; color: #fff !important; border-color: var(--orange) !important; }
@@ -934,7 +934,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AK</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AL</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1476,11 +1476,11 @@ body.bedtime .read-side-btn { opacity: 0.8; }
         <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-top:6px;">This takes just a moment ✨</p>
       </div>
       <div class="spelling-actions" id="spelling-actions" style="display:none;">
-        <button class="btn-main" id="btn-spelling-new" style="font-size:0.9rem;background:linear-gradient(135deg, #FF8C42, #FF6B6B);">📸 New</button>
-        <button class="btn-main btn-outline" id="btn-spelling-study" style="font-size:0.9rem;">📖 Study</button>
-        <button class="btn-main btn-purple" id="btn-spelling-practice" style="font-size:0.9rem;">🎯 Practice</button>
-        <button class="btn-main btn-coral" id="btn-spelling-quiz" style="font-size:0.9rem;">📝 Quiz</button>
-        <button class="btn-main btn-green" id="btn-spelling-done" style="display:none;">✅ Done</button>
+        <button class="btn-main" id="btn-spelling-new" style="font-size:0.9rem;background:linear-gradient(135deg, #FF8C42, #FF6B6B);">📸 New Words</button>
+        <button class="btn-main btn-outline" id="btn-spelling-study" style="font-size:0.9rem;">👀 Look & Learn</button>
+        <button class="btn-main btn-purple" id="btn-spelling-practice" style="font-size:0.9rem;">🎯 Let's Practice!</button>
+        <button class="btn-main btn-coral" id="btn-spelling-quiz" style="font-size:0.9rem;">📝 Test Me!</button>
+        <button id="btn-spelling-done" style="display:none;"></button>
       </div>
     </div>
   </div>
@@ -1846,17 +1846,17 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AK</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AL</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
 <div class="parent-bar" id="parent-bar">
   <button class="parent-bar-btn bar-btn-home" id="btn-go-home">🏠 Home</button>
-  <button class="parent-bar-btn bar-btn-back" id="bar-back" style="display:none;">← Back</button>
+  <button class="parent-bar-btn bar-btn-back" id="bar-back" style="display:none;">👈 Back</button>
   <button class="parent-bar-btn bar-btn-play" id="bar-play" style="display:none;">▶ Play</button>
   <button class="parent-bar-btn bar-btn-pause" id="bar-pause" style="display:none;">⏸ Pause</button>
   <button class="parent-bar-btn bar-btn-stop" id="bar-stop" style="display:none;">⏹ Stop</button>
-  <button class="parent-bar-btn bar-btn-settings" id="btn-bar-settings">⚙️ Settings</button>
+  <button class="parent-bar-btn bar-btn-settings" id="btn-bar-settings">👩‍👧 Parent</button>
 </div>
 
 <!-- Word saved toast -->
@@ -6660,29 +6660,29 @@ document.addEventListener('keydown', (e) => {
 // Maps screen IDs to their back action: [label, target screen or function]
 const SCREEN_BACK_MAP = {
   'screen-pick': null, // home — no back button
-  'screen-story-builder': ['← Back', 'screen-pick'],
-  'screen-read': ['← Back', 'screen-pick'],
-  'screen-solo-complete': ['← Back', 'screen-pick'],
-  'screen-spelling': ['← Back', 'screen-pick'],
-  'screen-spell-picker': ['← Back', 'screen-spelling'],
-  'screen-spell-practice': ['← Quit', 'screen-spelling'],
-  'screen-spell-results': ['← Back', 'screen-spelling'],
-  'screen-quiz-countdown': ['← Quit', 'screen-spelling'],
-  'screen-quiz': ['← Quit', 'screen-spelling'],
-  'screen-quiz-results': ['← Back', 'screen-spelling'],
-  'screen-wordbank': ['← Back', 'screen-pick'],
-  'screen-timed-source': ['← Back', 'screen-pick'],
-  'screen-timed-paste': ['← Back', 'screen-timed-source'],
-  'screen-own-source': ['← Back', 'screen-pick'],
-  'screen-own-paste': ['← Back', 'screen-own-source'],
-  'screen-wpm-instructions': ['← Back', 'screen-timed-source'],
+  'screen-story-builder': ['👈 Back', 'screen-pick'],
+  'screen-read': ['👈 Back', 'screen-pick'],
+  'screen-solo-complete': ['👈 Back', 'screen-pick'],
+  'screen-spelling': ['👈 Back', 'screen-pick'],
+  'screen-spell-picker': ['👈 Back', 'screen-spelling'],
+  'screen-spell-practice': ['👈 Quit', 'screen-spelling'],
+  'screen-spell-results': ['👈 Back', 'screen-spelling'],
+  'screen-quiz-countdown': ['👈 Quit', 'screen-spelling'],
+  'screen-quiz': ['👈 Quit', 'screen-spelling'],
+  'screen-quiz-results': ['👈 Back', 'screen-spelling'],
+  'screen-wordbank': ['👈 Back', 'screen-pick'],
+  'screen-timed-source': ['👈 Back', 'screen-pick'],
+  'screen-timed-paste': ['👈 Back', 'screen-timed-source'],
+  'screen-own-source': ['👈 Back', 'screen-pick'],
+  'screen-own-paste': ['👈 Back', 'screen-own-source'],
+  'screen-wpm-instructions': ['👈 Back', 'screen-timed-source'],
   'screen-wpm-read': null, // no back during timed reading
   'screen-wpm-tap': null, // no back during tap
-  'screen-wpm-results': ['← Done', 'screen-pick'],
-  'screen-join': ['← Back', 'screen-pick'],
-  'screen-waiting-host': ['← Back', 'screen-pick'],
-  'screen-waiting-guest': ['← Back', 'screen-pick'],
-  'screen-race-results': ['← Done', 'screen-pick'],
+  'screen-wpm-results': ['👈 Done', 'screen-pick'],
+  'screen-join': ['👈 Back', 'screen-pick'],
+  'screen-waiting-host': ['👈 Back', 'screen-pick'],
+  'screen-waiting-guest': ['👈 Back', 'screen-pick'],
+  'screen-race-results': ['👈 Done', 'screen-pick'],
   'screen-loading': null, // no back during loading
   'screen-countdown': null, // no back during countdown
 };
@@ -6914,7 +6914,7 @@ document.addEventListener('keydown', (e) => {
   <div style="background:var(--card);border-radius:20px 20px 0 0;padding:20px 20px 30px;width:100%;max-width:480px;box-shadow:0 -4px 30px rgba(0,0,0,0.15);">
     <div style="text-align:center;margin-bottom:14px;">
       <div style="width:40px;height:4px;background:var(--border);border-radius:4px;margin:0 auto 12px;"></div>
-      <div class="card-title" style="font-size:1.1rem;">⚙️ Settings</div>
+      <div class="card-title" style="font-size:1.1rem;">👩‍👧 Parent Menu</div>
     </div>
     <div style="display:flex;flex-direction:column;gap:10px;">
       <button class="btn-main" id="btn-global-parent" style="font-size:1rem;background:linear-gradient(135deg,#9B59B6,#8E44AD);box-shadow:0 4px 14px rgba(142,68,173,0.3);">👤 Parent Dashboard</button>
