Fix word highlight sync drift on long passages

--- a/index.html
+++ b/index.html
@@ -307,17 +307,17 @@ header { position: relative; }
 .word-toast.show { opacity: 1; transform: translateX(-50%) translateY(0); }
 
 /* ── Universal Bottom Nav Bar ── */
-.parent-bar { position: fixed; bottom: 0; left: 0; right: 0; width: 100%; z-index: 100; display: flex; justify-content: center; gap: 8px; padding: 10px 14px 12px; background: var(--bg); border-top: 2.5px solid var(--border); box-sizing: border-box; box-shadow: 0 -4px 20px rgba(0,0,0,0.08); }
-.parent-bar-btn { background: var(--purple-soft); border: 2.5px solid var(--border); color: var(--purple-deep); font-family: 'Nunito', sans-serif; font-size: 0.88rem; font-weight: 800; padding: 12px 18px; border-radius: 14px; cursor: pointer; transition: all 0.2s; flex: 1; text-align: center; }
+.parent-bar { position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: calc(100% - 24px); max-width: 500px; z-index: 100; display: flex; justify-content: center; gap: 8px; padding: 10px 14px 12px; background: var(--card); border: 2.5px solid var(--border); border-radius: 18px; box-sizing: border-box; box-shadow: 0 -4px 20px rgba(0,0,0,0.08); margin-bottom: 6px; }
+.parent-bar-btn { border: 2.5px solid var(--border); font-family: 'Nunito', sans-serif; font-size: 0.88rem; font-weight: 800; padding: 12px 14px; border-radius: 14px; cursor: pointer; transition: all 0.2s; flex: 1; text-align: center; white-space: nowrap; }
 .parent-bar-btn:hover { border-color: var(--purple); background: var(--purple); color: #fff; }
 .parent-bar-btn:active { transform: scale(0.95); }
 @media (min-width: 768px) {
-  .parent-bar { padding: 12px 20px 14px; gap: 10px; }
-  .parent-bar-btn { font-size: 1rem; padding: 14px 28px; border-radius: 16px; }
+  .parent-bar { padding: 12px 18px 14px; gap: 10px; max-width: 520px; margin-bottom: 8px; }
+  .parent-bar-btn { font-size: 1rem; padding: 14px 20px; border-radius: 16px; }
 }
 @media (min-width: 1024px) {
-  .parent-bar { padding: 14px 30px 16px; gap: 12px; }
-  .parent-bar-btn { font-size: 1.05rem; padding: 16px 36px; }
+  .parent-bar { padding: 14px 22px 16px; gap: 12px; max-width: 560px; }
+  .parent-bar-btn { font-size: 1.05rem; padding: 14px 24px; }
 }
 .bar-btn-home { background: var(--green) !important; color: #fff !important; border-color: var(--green) !important; }
 .bar-btn-back { background: var(--orange) !important; color: #fff !important; border-color: var(--orange) !important; }
@@ -934,7 +934,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AN</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AO</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1846,13 +1846,13 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AN</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AO</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
 <div class="parent-bar" id="parent-bar">
   <button class="parent-bar-btn bar-btn-home" id="btn-go-home">🏠 Home</button>
-  <button class="parent-bar-btn bar-btn-back" id="bar-back" style="display:none;">👈 Back</button>
+  <button class="parent-bar-btn bar-btn-back" id="bar-back" style="display:none;">← Back</button>
   <button class="parent-bar-btn bar-btn-play" id="bar-play" style="display:none;">▶ Play</button>
   <button class="parent-bar-btn bar-btn-pause" id="bar-pause" style="display:none;">⏸ Pause</button>
   <button class="parent-bar-btn bar-btn-stop" id="bar-stop" style="display:none;">⏹ Stop</button>
@@ -6660,29 +6660,29 @@ document.addEventListener('keydown', (e) => {
 // Maps screen IDs to their back action: [label, target screen or function]
 const SCREEN_BACK_MAP = {
   'screen-pick': null, // home — no back button
-  'screen-story-builder': ['👈 Back', 'screen-pick'],
-  'screen-read': ['👈 Back', 'screen-pick'],
-  'screen-solo-complete': ['👈 Back', 'screen-pick'],
-  'screen-spelling': ['👈 Back', 'screen-pick'],
-  'screen-spell-picker': ['👈 Back', 'screen-spelling'],
-  'screen-spell-practice': ['👈 Quit', 'screen-spelling'],
-  'screen-spell-results': ['👈 Back', 'screen-spelling'],
-  'screen-quiz-countdown': ['👈 Quit', 'screen-spelling'],
-  'screen-quiz': ['👈 Quit', 'screen-spelling'],
-  'screen-quiz-results': ['👈 Back', 'screen-spelling'],
-  'screen-wordbank': ['👈 Back', 'screen-pick'],
-  'screen-timed-source': ['👈 Back', 'screen-pick'],
-  'screen-timed-paste': ['👈 Back', 'screen-timed-source'],
-  'screen-own-source': ['👈 Back', 'screen-pick'],
-  'screen-own-paste': ['👈 Back', 'screen-own-source'],
-  'screen-wpm-instructions': ['👈 Back', 'screen-timed-source'],
+  'screen-story-builder': ['← Back', 'screen-pick'],
+  'screen-read': ['← Back', 'screen-pick'],
+  'screen-solo-complete': ['← Back', 'screen-pick'],
+  'screen-spelling': ['← Back', 'screen-pick'],
+  'screen-spell-picker': ['← Back', 'screen-spelling'],
+  'screen-spell-practice': ['← Quit', 'screen-spelling'],
+  'screen-spell-results': ['← Back', 'screen-spelling'],
+  'screen-quiz-countdown': ['← Quit', 'screen-spelling'],
+  'screen-quiz': ['← Quit', 'screen-spelling'],
+  'screen-quiz-results': ['← Back', 'screen-spelling'],
+  'screen-wordbank': ['← Back', 'screen-pick'],
+  'screen-timed-source': ['← Back', 'screen-pick'],
+  'screen-timed-paste': ['← Back', 'screen-timed-source'],
+  'screen-own-source': ['← Back', 'screen-pick'],
+  'screen-own-paste': ['← Back', 'screen-own-source'],
+  'screen-wpm-instructions': ['← Back', 'screen-timed-source'],
   'screen-wpm-read': null, // no back during timed reading
   'screen-wpm-tap': null, // no back during tap
-  'screen-wpm-results': ['👈 Done', 'screen-pick'],
-  'screen-join': ['👈 Back', 'screen-pick'],
-  'screen-waiting-host': ['👈 Back', 'screen-pick'],
-  'screen-waiting-guest': ['👈 Back', 'screen-pick'],
-  'screen-race-results': ['👈 Done', 'screen-pick'],
+  'screen-wpm-results': ['← Done', 'screen-pick'],
+  'screen-join': ['← Back', 'screen-pick'],
+  'screen-waiting-host': ['← Back', 'screen-pick'],
+  'screen-waiting-guest': ['← Back', 'screen-pick'],
+  'screen-race-results': ['← Done', 'screen-pick'],
   'screen-loading': null, // no back during loading
   'screen-countdown': null, // no back during countdown
 };
