--- a/index.html
+++ b/index.html
@@ -307,30 +307,22 @@ header { position: relative; }
 .word-toast.show { opacity: 1; transform: translateX(-50%) translateY(0); }
 
 /* ── Universal Bottom Nav Bar ── */
-.parent-bar { position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: calc(100% - 24px); max-width: 500px; z-index: 100; display: flex; justify-content: center; gap: 8px; padding: 10px 14px 12px; background: var(--card); border: 2.5px solid var(--border); border-radius: 18px; box-sizing: border-box; box-shadow: 0 -4px 20px rgba(0,0,0,0.08); margin-bottom: 6px; }
-.parent-bar-btn { border: 2.5px solid var(--border); font-family: 'Nunito', sans-serif; font-size: 0.88rem; font-weight: 800; padding: 12px 14px; border-radius: 14px; cursor: pointer; transition: all 0.2s; flex: 1; text-align: center; white-space: nowrap; }
+.parent-bar { position: fixed; bottom: 4px; left: 8px; right: 8px; width: auto; z-index: 100; display: flex; justify-content: center; gap: 8px; padding: 7px 12px; background: rgba(255,255,255,0.97); border: 1.5px solid var(--border); border-radius: 14px; backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); box-sizing: border-box; box-shadow: 0 -2px 12px rgba(0,0,0,0.06); }
+.parent-bar-btn { border: 2px solid var(--border); font-family: 'Nunito', sans-serif; font-size: 0.75rem; font-weight: 800; padding: 7px 14px; border-radius: 10px; cursor: pointer; transition: all 0.2s; white-space: nowrap; }
 .parent-bar-btn:hover { border-color: var(--purple); background: var(--purple); color: #fff; }
 .parent-bar-btn:active { transform: scale(0.95); }
-@media (min-width: 768px) {
-  .parent-bar { padding: 12px 18px 14px; gap: 10px; max-width: 520px; margin-bottom: 8px; }
-  .parent-bar-btn { font-size: 1rem; padding: 14px 20px; border-radius: 16px; }
-}
-@media (min-width: 1024px) {
-  .parent-bar { padding: 14px 22px 16px; gap: 12px; max-width: 560px; }
-  .parent-bar-btn { font-size: 1.05rem; padding: 14px 24px; }
-}
-.bar-btn-home { background: var(--green) !important; color: #fff !important; border-color: var(--green) !important; }
-.bar-btn-back { background: var(--orange) !important; color: #fff !important; border-color: var(--orange) !important; }
-.bar-btn-settings { background: linear-gradient(135deg, #54A0FF, #2E86DE) !important; color: #fff !important; border-color: #2E86DE !important; }
-.bar-btn-play { background: var(--green) !important; color: #fff !important; border-color: var(--green) !important; }
-.bar-btn-pause { background: var(--coral) !important; color: #fff !important; border-color: var(--coral) !important; }
-.bar-btn-stop { background: var(--muted) !important; color: #fff !important; border-color: var(--muted) !important; }
+.bar-btn-home { background: var(--green); color: #fff; border-color: var(--green); }
+.bar-btn-back { background: var(--orange); color: #fff; border-color: var(--orange); }
+.bar-btn-settings { background: #54A0FF; color: #fff; border-color: #2E86DE; }
+.bar-btn-play { background: var(--green); color: #fff; border-color: var(--green); }
+.bar-btn-pause { background: var(--coral); color: #fff; border-color: var(--coral); }
+.bar-btn-stop { background: var(--muted); color: #fff; border-color: var(--muted); }
 body.bedtime .parent-bar { background: rgba(26,26,46,0.97); border-color: #3a3a5c; box-shadow: 0 -2px 20px rgba(0,0,0,0.3); }
 body.bedtime .parent-bar-btn { background: #3a2a1a; border-color: #3a3a5c; color: #d4a76a; }
 body.bedtime .parent-bar-btn:hover { background: #8a6a3a; border-color: #8a6a3a; color: #fff; }
-/* Bottom nav bar is fixed at bottom — add padding so content clears it */
-.screen > .card:last-child { margin-bottom: 70px; }
-.screen { padding-bottom: 70px; }
+/* Content clears the fixed bar */
+.screen > .card:last-child { margin-bottom: 56px; }
+.screen { padding-bottom: 56px; }
 
 /* ── Spelling Study Mode (Fullscreen) ── */
 .spell-study-overlay { position: fixed; inset: 0; z-index: 200; background: var(--bg); overflow-y: auto; overscroll-behavior: contain; display: none; animation: fadeIn 0.3s ease; }
@@ -934,7 +926,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AO</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AP</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1846,7 +1838,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AO</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AP</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
